[web] Add missing content-svc image-upload gateway proxy route
